syntax = "proto2";

package tp;

message Message{
    optional string type = 1;
    optional Create create = 2;
    optional Login login = 3;
    optional ManufacturerOrder manufacturerOrder = 4;
    optional ImporterOffer importerOffer = 5;
}


message Create {
    optional string username=1;
    optional string password = 2;
    optional int32 type = 3;
}

message Login {
    optional string username=1;
    optional string password = 2;
    optional int32 type = 3;
    optional int32 status = 4;
}


message ManufacturerOrder {
    optional int64 id = 1;
    optional string manufacturer = 2;
    optional string product = 3;
    optional int64 minQuantity = 4;
    optional int64 maxQuantity = 5;
    optional double unitPrice = 6;
    optional int32 active = 7;
    optional int64 negotiation  = 8;
}

message ImporterOffer {
    optional int64 id = 1;
    optional string manufacturer = 2;
    optional string product = 3;
    optional int64 quantity = 4;
    optional double unitPrice = 5;
}